Proxy mostly (server,corpus,hits) works for Solr.