@@ -1,6 +1,6 @@
 package org.ivdnt.blacklab.proxy.resources;
 
-import java.util.Collections;
+import java.util.Map;
 
 import javax.inject.Inject;
 import javax.ws.rs.GET;
@@ -11,6 +11,10 @@ import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 
 import org.ivdnt.blacklab.proxy.logic.Requests;
+import org.ivdnt.blacklab.proxy.representation.Server;
+
+import nl.inl.blacklab.webservice.WebserviceOperation;
+import nl.inl.blacklab.webservice.WsPar;
 
 @Path("")
 public class RootResource {
@@ -26,7 +30,8 @@ public class RootResource {
     @GET
     @Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
     public Response serverInfo() {
-        return Requests.get(client, Collections.emptyMap());
+        Map<String, String> params = Map.of(WsPar.OPERATION, WebserviceOperation.SERVER_INFO.value());
+        return CorpusResource.wrap(Requests.get(client, params, Server.class));
     }
 
 }
